--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -9,7 +9,7 @@
     <div class="col-sm-12">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h3 class="panel-title"><%= picture.name %></h3>
+          <h3 class="panel-title"><%= picture.the_caption %></h3>
         </div>
         <div class="panel-body">
           <div class="col-sm-2">
@@ -17,11 +17,6 @@
           </div>
           <div class="col-sm-10">
             <dl>
-              <dt>Picture ID</dt>
-              <dd><%= picture.id %></dd>
-
-              <dt>Caption</dt>
-              <dd><%= picture.caption %></dd>
 
               <dt>Actions</dt>
               <dd>
