--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,25 +1,17 @@
 <h1>Add A New Picture</h1>
 
-<form action="/create_picture">
-
+<form action="http://localhost:3000/create_picture">
   <div>
-    <label for="name">Picture Name</label>
-    <input id="name" type="text" name="name">
+    <label for="the_caption">Caption:</label>
+    <input id="the_caption" type="text" name="caption">
   </div>
   <div>
-    <label for="id">Picture ID</label>
-    <input id="id" type="text" name="id">
+    <label for="image_url">Image URL:</label>
+    <input id="image_url" type="text" name="source">
   </div>
   <div>
-    <label for="caption">Caption</label>
-    <input id="caption" type="text" name="caption">
+    <input type="submit" value="Create Picture">
   </div>
-  <div>
-    <label for="image_url">Image URL</label>
-    <input id="image_url" type="text" name="image_url">
-  </div>
-  <div>
-    <input type="submit">
-  </div>
-
 </form>
+
+
