--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,10 @@
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
+<!-- PUT ALL BOOTSTRAP LINKS HERE -->
 <body>
+
+<a href = "/">HOME</a>
 
 <%= yield %>
 
