--- a/app/views/pictures/show.html.erb
+++ b/app/views/pictures/show.html.erb
@@ -1,5 +1,8 @@
 <h1>Picture Details</h1>
+<a href="http://localhost:3000/delete_picture/<%= @picture.id %>">Delete this picture</a>
 
-<pre><%= @picture.to_yaml %></pre>
+<div><img src= <%= @picture.source %>></div>
+
+<p><%= @picture.caption %></p>
 
 
